header alignment fixes

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -92,5 +92,11 @@
         .right-wrapper {
             align-items: center;
         }
+        .categories-wrapper {
+            justify-content: center;
+        }
+        .collections-wrapper {
+            justify-content: center;
+        }
     }
 }
