--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -24,6 +24,16 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    .mob-nav-menu {
+      display: none;
+      font-size: 30px;
+      cursor: pointer;
+      margin-left: 15px;
+      color: #a21212;
+    }
+    .search-container {
+      display: none;
+    }
   }
 
   .brand-logo {
@@ -110,7 +120,7 @@
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   top: 0;
   left: 0;
   background-color: #a21212;
@@ -129,16 +139,104 @@
     cursor: pointer;
   }
   a {
-    padding: 8px 8px 8px 32px;
+    padding: 20px 10px;
     text-decoration: none;
     font-size: 20px;
     color: #eee;
     display: block;
     transition: 0.3s;
     cursor: pointer;
+    text-align: center;
+
     &:hover {
       color: #fff;
     }
+  }
+}
+
+.button {
+  display: inline-block;
+  margin: 0;
+  background-color: #fff;
+  font-size: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: auto;
+  text-align: center;
+  color: #a21212;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.button:hover {
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
+}
+
+.search-container {
+  position: relative;
+}
+
+.mglass {
+  display: inline-block;
+  pointer-events: none;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+}
+
+.searchbutton {
+  padding: 10px;
+}
+
+.search {
+  position: absolute;
+  left: 49px;
+  background-color: white;
+  outline: none;
+  border: none;
+  padding: 10px;
+  width: 0;
+  height: 100%;
+  z-index: 10;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+
+  &:focus + .searchbutton {
+    transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+    background-color: white;
+    color: black;
+    border: 1px solid #ddd;
+    border-left: none;
+  }
+}
+
+.search:focus {
+  width: 363px; /* Bar width+1px */
+  padding: 0 16px 0 0;
+}
+
+.expandright {
+  left: auto;
+  right: 35px;
+
+  &:focus {
+    padding: 0 0 0 16px;
+    border: 1px solid #ddd;
+    border-right: none;
   }
 }
 
@@ -161,6 +259,17 @@
       }
       .navigation-links {
         display: none;
+      }
+    }
+    .mid-wrap {
+      display: none;
+    }
+    .right-wrap {
+      .mob-nav-menu {
+        display: block;
+      }
+      .search-container {
+        display: block;
       }
     }
   }
