--- a/src/app/components/subheading/subheading.component.scss
+++ b/src/app/components/subheading/subheading.component.scss
@@ -1,12 +1,15 @@
 .sub-heading {
-    display: flex;
-    margin: 50px;
+  display: flex;
+  align-items: center;
+  margin: 50px;
+
   p {
-    width: 20%;
+    width: auto;
     text-align: center;
-    margin: 0;
+    margin: 0 20px;
     font-size: 16px;
     font-weight: 500;
+    flex: none;
   }
   .dotted-lines {
     border-bottom: 1.5px solid rgb(83, 82, 82);
@@ -14,7 +17,14 @@
     border-left: 2px solid transparent;
     border-right: 2px solid transparent;
     height: 6px;
-    width: 40%;
+    width: auto;
     border-style: dashed;
+    flex: 1;
+  }
+}
+
+@media (max-width: 992px) {
+  .sub-heading {
+    margin: 50px 20px;
   }
 }
